Github live pages overflow fix v9
Margin lager gezet, cards nu in beeld als het goed is.

--- a/styles/style.css
+++ b/styles/style.css
@@ -233,7 +233,7 @@ hr {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
     gap: 3em;
-    margin: 3em;
+    margin: 1em;
     max-width: 100vw;
 
     @media screen and (min-width: 878px) {
